# PostPick

./: .gitignore  activate.sh  main.py  pyproject.toml
research/: global_model.ipynb
research/ncaa/: global_model.ipynb
scripts/: scrape_game_data.sh  scrape_player_data.sh
src/: TODO.md
src/models/: Vanilla.py
src/ncaa/: data_cleaning.py  game_scraper.py  pbp_scraper.py  player_scraper.py
src/utils/: enums.py  mcmc_viz.py
