[project]
name = "postpick"
version = "0.1.0"
description = "Sports betting research, scraping, and analysis platform"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "jupyter>=1.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.66.0",
    "aiolimiter>=1.1.0",
]
