[project]
name = "postpick"
version = "0.1.0"
description = "Sports betting research, scraping, and analysis platform"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "selenium>=4.15.0",
    "pandas>=2.1.0",
    "numpy>=1.24.0,<2.0",
    "aiohttp>=3.9.0",
    "asyncio-throttle>=1.0.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "sqlalchemy>=2.0.0",
    "psycopg2-binary>=2.9.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0", # ensure the kernel exists for this venv
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scikit-learn>=1.3.0",
    "scipy>=1.10.0,<1.16.0",
    "tqdm>=4.66.0",
    "aiolimiter>=1.1.0",
    "arviz>=0.22.0",
    "ml-dtypes>=0.4.0",
    # you asked for these:
    "ipynb>=0.5.0", # work with .ipynb files via import
    "pytz>=2024.1",
    "jax>=0.4.35,<0.5.0",
    "jaxlib>=0.4.35,<0.5.0",
    "jax-metal>=0.1.0",
    "numpyro>=0.15.0",
]
